--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
-    "mysql": "^2.16.0"
+    "mysql": "^2.16.0",
+    "request": "^2.88.0",
+    "xml2json": "^0.11.2"
   },
   "devDependencies": {
     "nodemon": "^1.18.9"
