--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "express": "^4.16.4",
     "mysql": "^2.16.0",
     "request": "^2.88.0",
+    "rss-parser": "^3.6.2",
     "xml2json": "^0.11.2"
   },
   "devDependencies": {
