--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
+    "firebase-admin": "^6.5.0",
     "mysql": "^2.16.0",
     "request": "^2.88.0",
     "rss-parser": "^3.6.2",
